libui_sources += [
	'haiku/alloc.cpp',
	'haiku/area.cpp',
	'haiku/box.cpp',
	'haiku/button.cpp',
	'haiku/checkbox.cpp',
	'haiku/colorbutton.cpp',
	'haiku/combobox.cpp',
	'haiku/control.cpp',
	'haiku/datetimepicker.cpp',
	'haiku/draw.cpp',
	'haiku/drawmatrix.cpp',
	'haiku/drawpath.cpp',
	'haiku/drawtext.cpp',
	'haiku/editablecombo.cpp',
	'haiku/entry.cpp',
	'haiku/fontbutton.cpp',
	'haiku/form.cpp',
	'haiku/future.cpp',
	'haiku/graphemes.cpp',
	'haiku/grid.cpp',
	'haiku/group.cpp',
	'haiku/image.cpp',
	'haiku/label.cpp',
	'haiku/main.cpp',
	'haiku/menu.cpp',
	'haiku/multilineentry.cpp',
	'haiku/progressbar.cpp',
	'haiku/radiobuttons.cpp',
	'haiku/separator.cpp',
	'haiku/slider.cpp',
	'haiku/spinbox.cpp',
	'haiku/stddialogs.cpp',
	'haiku/tab.cpp',
	'haiku/table.cpp',
	'haiku/tablemodel.cpp',
	'haiku/text.cpp',
	'haiku/util.cpp',
	'haiku/window.cpp',
]

libui_deps += [
	meson.get_compiler('cpp').find_library('be',
		required: true),
]
libui_rpath = '$ORIGIN'
